[gd_scene load_steps=5 format=3 uid="uid://daxhe4p8k76v7"]

[ext_resource type="Theme" uid="uid://cdwqgphxj12ib" path="res://Theme/theme.tres" id="1_8vsdi"]
[ext_resource type="Script" path="res://Scenes/Screens/StartScreen/start_screen.gd" id="2_dg0lx"]
[ext_resource type="PackedScene" uid="uid://yblvpqkva3wh" path="res://Scenes/Music/dimensional_mess.tscn" id="3_6wuq3"]
[ext_resource type="FontFile" uid="uid://dksd46e6qn8vg" path="res://Assets/Fonts/Flames.ttf" id="3_d7ryi"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
theme = ExtResource("1_8vsdi")
script = ExtResource("2_dg0lx")

[node name="Label4" type="Label" parent="."]
layout_mode = 2
offset_left = 202.0
offset_top = -344.0
offset_right = 1255.0
offset_bottom = -328.0
text = "GMTK Game Jam 2024 Edition"

[node name="Label5" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -526.5
offset_top = 266.0
offset_right = 526.5
offset_bottom = 282.0
grow_horizontal = 2
grow_vertical = 2
text = "by Matthieu \"Ezveus\" Ciappara"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -526.5
offset_top = -89.0
offset_right = 526.5
offset_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_d7ryi")
theme_override_font_sizes/font_size = 100
text = "Pyro"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "in"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "The Dimensional Mess"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../QuitButton")
theme_override_font_sizes/font_size = 45
text = "Play !"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../PlayButton")
focus_neighbor_bottom = NodePath("../PlayButton")
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../PlayButton")
theme_override_font_sizes/font_size = 45
text = "Quit"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.545098, 0.270588, 0.0745098, 1)

[node name="DimensionalMess" parent="." instance=ExtResource("3_6wuq3")]

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
